# voice_agent

./: .env.example  .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/src/livekit/: agent.py
backend/src/livekit/adapter/: langgraph.py
backend_langgraph/: .env.example  .gitignore  1.2.6  BACKEND_DOCUMENTATION.md  FRONTEND_DOCUMENTATION.md  README.md  agent_test.ipynb  compose.yml  langgraph.json  livekit-agent.Dockerfile  pyproject.toml  repomix-output.xml  requirements.txt  space_index.faiss  space_index.json  test_api.py  test_full_project.py  test_livekit.py
backend_langgraph/src/: run_livekit_local.py
backend_langgraph/src/langgraph/: Dockerfile  docker-compose.prod.yml  pyproject.toml  requirements.txt  schema.sql
backend_langgraph/src/langgraph/app/: main.py
backend_langgraph/src/langgraph/app/core/: config.py  limiter.py  logging.py  middleware.py
backend_langgraph/src/langgraph/app/models/: database.py  session.py  user.py
backend_langgraph/src/langgraph/app/schemas/: __init__.py  livekit.py
backend_langgraph/src/langgraph/app/services/: __init__.py  (+1 more)
backend_langgraph/src/langgraph/evals/: evaluator.py  helpers.py  main.py
backend_langgraph/src/langgraph/scripts/: docker-entrypoint.sh
backend_langgraph/src/livekit_main/: Makefile  ReadMe.md  pyproject.toml
backend_langgraph/src/livekit_main/src/: agent.py
frontend/: app-config.ts  package-lock.json
frontend/app/(app)/: layout.tsx
frontend/components/: session-view.tsx
frontend/components/livekit/: agent-tile.tsx
frontend/hooks/: useLangGraphChat.ts
(+59 files in other folders)
